project/StandaloneProject/project/07-sky-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sky-front
  namespace: javaproject
spec:
  selector:
    app: sky-front
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
